Bug 163144 - CRASH: undoing slide duplication with a slide with comments
Summary: CRASH: undoing slide duplication with a slide with comments
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: high major
Assignee: Tomaz Vajngerl
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-09-25 09:06 UTC by Xisco Faulí
Modified: 2025-01-02 13:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb bt (7.18 KB, text/plain)
2024-09-25 10:31 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-09-25 09:06:23 UTC
Steps to reproduce:
1. Open Impress
2. Add a comment
3. Duplicate the slide
4. Undo

-> Crash

Reproduced in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4787fd4fc86230893a6da309f45964116b3a67df
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-09-25 09:07:38 UTC
Regression introduced by:

commit 6289ad39e851c709111b582e4390a097b30e2cae	[log]
author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	Thu Jun 20 17:10:01 2024 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	Thu Jun 20 14:06:51 2024 +0200
tree f4ce68108881258fb404dfb3459cb43813a4f829
parent 51dfbb1fce61dfb2e1d4c91350d2299e6dc3e04d [diff]

annot: clone annotations in SdrObjects when the page is duplicated

Bisected with: bibisect-linux64-25.2
Comment 2 Julien Nabet 2024-09-25 10:31:25 UTC
Created attachment 196673 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I attached bt with gdb debug.
Comment 3 Tomaz Vajngerl 2024-09-30 15:19:48 UTC
Looking into it...
Reproduced with a failing test: https://gerrit.libreoffice.org/c/core/+/174287
Comment 4 Xisco Faulí 2024-11-28 08:28:04 UTC
Still reproducible in

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: fe7fe79feef8561d1cbd731d1bd53357eef902be
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2024-12-24 22:10:36 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f24bb80e45c1693db33b47ee695436b2c8d5fbcd

tdf#163144 Undo crash when duplicationg a page with a new annotation

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-12-26 10:14:43 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/2f6cc65bc813ee5df8c6117deaaf7696c6890372

tdf#163144 Undo crash when duplicationg a page with a new annotation

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2024-12-26 11:41:37 UTC
Verified in

Version: 25.2.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 2f6cc65bc813ee5df8c6117deaaf7696c6890372
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Tomaž, should this issue be closed as RESOLVED FIXED now ?