tdf#163144 Undo crash when duplicationg a page with a new annotation

Check if the annotation pop-up is set and only if it is, try to
close it. Also added a test for this.

Change-Id: Id2db041f2c0e917304377a747b1bb31bda0c6f5f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174287
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>