sd/source/core/sdpage2.cxx
@@ -603,7 +603,9 @@ void SdPage::removeAnnotationNoNotify(rtl::Reference<sdr::annotation::Annotation
         SdrObject* pObject = GetObj(nObjectIndex);
         if (pObject->isAnnotationObject() && pObject->getAnnotationData()->mxAnnotation == xAnnotation)
         {
-            pObject->getAnnotationData()->mpAnnotationPopup->closePopup();
+            auto& pAnnotationPopup = pObject->getAnnotationData()->mpAnnotationPopup;
+            if (pAnnotationPopup)
+                pAnnotationPopup->closePopup();
             RemoveObject(nObjectIndex);
         }
     }
